--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ tr:nth-child(even) {
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     z-index: 100;
     border-radius: 4px;
+    background: #D9D9D9 !important;
 }
 #header .nav .nav-language #lang-submenu.hidden{
     display: none ;
