--- a/style.css
+++ b/style.css
@@ -174,7 +174,8 @@ tr:nth-child(even) {
     align-items: start;
     justify-content: flex-start;
     padding: 10px;
-    height: 10vh;
+    gap: 10px;
+    height: fit-content;
     width: 100%;
     top: 150%;
     z-index: 1000;
