--- a/faq/index.css
+++ b/faq/index.css
@@ -13,6 +13,11 @@ body {
     position: relative;
     transition: color 0.3s, border-color 0.3s, background-color 0.3s;
     scroll-behavior: smooth;
+    background-image: url('../image/faq/bg.png');
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
+    background-attachment: fixed
 } 
 
 main{
@@ -20,12 +25,10 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
-    min-height: 100vh;
+    /* height: 100%;
+    min-height: 100vh; */
     width: 100%;
-    background-image: url('../image/faq/bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+
     padding-top: 52px;
     z-index: 100000;
     overflow: hidden;
@@ -35,7 +38,6 @@ main{
     display: flex;
     justify-content: space-between;
     height: 6rem;
-    padding: 0 50px;
     position: fixed;
     z-index: 100;
 
@@ -56,7 +58,7 @@ main{
     justify-content: center;
 }
 #container {
-    margin: 6vh 0 0!important;
+    margin: 2vh 0 0;
     display: flex;
     width: 100%;
     position: relative;
@@ -196,8 +198,10 @@ main{
 
 }
 #container .faq-container h1 {
-    font-size: 60px;
-    font-weight: bold;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
     width: 100%;
     color: #fff;
     text-align: center;
@@ -307,13 +311,8 @@ footer {
 }
 /*respon*/
 @media (max-width: 1440px) {
-    header {
-        padding: 0 50px;
-        position: relative;
-    }
-    #container .faq-container h1 {
-        font-size: 60px;
-        color: #fff;
+    #container{
+        margin: 0 !important;
     }
     .category-nav .sourcing,
     .category-nav .witness,
@@ -321,7 +320,7 @@ footer {
         font-size: 22px;
     }
     #container .faq-container h1 {
-        font-size: 50px;
+        font-size: 54px;
     }
     .faq-container_content .faq-box .faq-box_title h2{
         font-size: 32px !important;
@@ -342,7 +341,7 @@ footer {
         gap: 25px;
     }
     #container {
-        margin: 12vh 0;
+        margin: 2vh 0 0 !important;
     }
     #container .faq-container {
         max-width: 65%;
