--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ tr:nth-child(even) {
 }
 #header .logo{
     width: 105px;
-    height: 80px;
+    height: 100%;
     position: relative;
     animation: moveHeader 1.5s;
     cursor: pointer;
@@ -315,7 +315,13 @@ tr:nth-child(even) {
     display: none;
 }
 @media (max-width: 1440px){
-
+    #header {
+        padding: 0 53px 0 72px;
+        position: relative;
+    }
+    #header .logo{
+        width: 80px;
+    }
     .bg{
         bottom: 25%;
     }
@@ -353,8 +359,6 @@ tr:nth-child(even) {
         padding: 0 60px 60px ;
     }
     #header .logo {
-        width: 90px;
-        height: 75px;
         padding-top: 10px;
     }
     #container .title{
@@ -369,7 +373,9 @@ tr:nth-child(even) {
     #container .sun{
         width: 115px;
         height: 115px;
-
+    }
+    #header .logo{
+        width: 70px;
     }
     .bg{
         bottom: 25%;
@@ -382,7 +388,9 @@ tr:nth-child(even) {
     }
 }
 @media (max-width: 990px){
-
+    main{
+        padding-top: 32px;
+    }
     .karma-content h1{
         font-size: 36px;
     }
@@ -414,12 +422,12 @@ tr:nth-child(even) {
     #header {
         padding: 0 40px;
     }
-    #container .sun{
-        width: 100px;
-        height: 100px;
-    }
     #header .logo{
-        width: 85px;
+        width: 65px;
+    }
+    #container .sun{
+        width: 90px;
+        height: 90px;
     }
     .mountain-container {
         padding: 30px 0;
@@ -435,10 +443,6 @@ tr:nth-child(even) {
         font-size: 28px;
         font-weight: 700;
         color: #FFFFFF;
-    }
-    #container .sun{
-        width: 100px;
-        height: 100px;
     }
     .mountain{
         max-height: 55vh;
@@ -526,7 +530,7 @@ tr:nth-child(even) {
         font-size: 14px;
     }
     #header .logo{
-        width: 70px;
+        width: 55px;
     }
     .mountain .road{
         left: 0%;
