--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     padding: 0;
     box-sizing: border-box;
     margin: 0;
 }
 html{
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
 }
 body{
@@ -119,6 +119,8 @@ tr:nth-child(even) {
     height: 60px;
     padding: 0 72px;
     position: relative;
+    z-index: 100000000;
+    overflow: visible;
 }
 #header .logo{
     width: 105px;
@@ -317,7 +319,24 @@ tr:nth-child(even) {
 .hidden{
     display: none;
 }
+@media (min-width: 1920px){
+    #header .logo{
+        width: 105px;
+    } 
+}
+@media (min-width: 1440px){
+    #header .logo{
+        width: 100px;
+        height: 80px;
+    } 
+}
 @media (max-width: 1440px){
+    #header .nav .nav-language #lang-toggle{
+        font-size: 20px;
+    }
+    #header .nav .nav-faq a{
+        font-size: 20px;
+    }
     #header {
         padding: 0 53px 0 72px;
         position: relative;
@@ -348,12 +367,11 @@ tr:nth-child(even) {
     }
 }
 @media (max-width: 1200px) {
+    #header .logo {
+        width: 70px;
+    }
     main{
         padding-top: 42px;
-    }
-    .nav .nav-faq a,
-    .nav-language #lang-toggle{
-        font-size: 22px !important;
     }
     .nav-language #lang-submenu .lang{
         font-size: 20px !important;
@@ -450,6 +468,10 @@ tr:nth-child(even) {
     .mountain{
         max-height: 55vh;
     }
+    .nav .nav-faq a,
+    .nav-language #lang-toggle{
+        font-size: 18px !important;
+    }
 }
 @media (max-width: 868px){
     .karma-content{
@@ -457,6 +479,9 @@ tr:nth-child(even) {
     }
 }
 @media (max-width: 768px) {
+    #header .logo{
+        width: 60px;
+    }
     .mountain-container{
         padding: 30px 0 0;
     }
@@ -502,7 +527,7 @@ tr:nth-child(even) {
     }
     .nav .nav-faq a,
     .nav-language #lang-toggle{
-        font-size: 18px !important;
+        font-size: 16px !important;
     }
     .nav-language #lang-submenu .lang{
         font-size: 16px !important;
@@ -533,7 +558,7 @@ tr:nth-child(even) {
         font-size: 14px;
     }
     #header .logo{
-        width: 55px;
+        width: 50px;
     }
     .mountain .road{
         left: 0%;
@@ -584,7 +609,7 @@ tr:nth-child(even) {
 @media (max-width: 450px) {
     .nav .nav-faq a,
     .nav-language #lang-toggle{
-        font-size: 16px !important;
+        font-size: 15px !important;
     }
     .nav-language #lang-submenu .lang{
         font-size: 14px !important;
@@ -626,11 +651,11 @@ tr:nth-child(even) {
         font-size: 16px !important;
     }
     #header{
-        height: 55px;
+        height: 50px;
         padding: 0 20px 0 20px;
     }
     #header .logo{
-        width: 50px;
+        width: 40px;
         display: flex;
         align-items: center;
         padding-top: 0;
