--- a/faq/index.css
+++ b/faq/index.css
@@ -775,7 +775,13 @@ main{
 }
 
 @media (max-width: 450px) {
-    
+    #header {
+        height: 50px !important;
+        padding: 0 20px 0 20px !important;
+    }
+    #header .nav {
+        gap: 10px !important;
+    }
     .faq-box .faq-box_content .question {
         padding: 12px 35px 12px 20px;
     }
@@ -785,13 +791,8 @@ main{
     .show-more-btn svg{
         width: 30px;
     }
-    header{
-        margin-top: 20px;
-    }
-    header .logo {
-        max-width: 60px;
-        max-height: 45px;
-        margin-top: 0;
+    main{
+        padding-top: 20px !important;
     }
     .category-nav .sourcing,
     .category-nav .witness,
