--- a/faq/index.css
+++ b/faq/index.css
@@ -612,7 +612,6 @@ main{
 @media (max-width: 640px) {
     .diagram-button{
         padding: 4px 10px;
-
         margin-top: 10px;
     }
     .diagram-display {
@@ -629,7 +628,7 @@ main{
     }
     .close-fullscreen-btn{
         max-width: 20%;
-        padding: 2px 8px;
+        padding: 4px 10px;
         font-size: 13px;
     }
     .fullscreen-image {
@@ -659,6 +658,7 @@ main{
 
     #header{
         justify-content: unset;
+        position: relative !important;
     }
     #header .nav {
         gap: 0 !important;
@@ -793,6 +793,9 @@ main{
     }
     main{
         padding-top: 20px !important;
+    }
+    #container{
+        margin-top: 10px !important;
     }
     .category-nav .sourcing,
     .category-nav .witness,
