--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ tr:nth-child(even) {
     height: 60px;
     padding: 0 72px;
     position: relative;
-    z-index: 100000000;
+    z-index: 10000;
     overflow: visible;
 }
 #header .logo{
