--- a/faq/index.css
+++ b/faq/index.css
@@ -785,22 +785,7 @@ main{
 }
 
 @media (max-width: 640px) {
-    .fullscreen-overlay {
-        background-color: rgba(0, 0, 0, 0.9);
-    }
-    main #header .nav .category-nav{
-        height: 100vh !important;
-    }
-    .fullscreen-content{
-        position: unset  !important;
-    }
-    .fullscreen-diagram{
-        z-index: 10001;
-    }
-     main{
-        min-height: 100vh !important;
-        z-index: 10000;
-     }
+
     main #header .nav .category-nav .sourcing,
     main #header .nav .category-nav .witness,
     main #header .nav .category-nav .allocation{
@@ -874,7 +859,7 @@ main{
         font-size: 13px;
     }
     .fullscreen-image {
-        max-height: 90%;
+        max-height: 95%;
     }
     .faq-box .faq-box_content .accordion .show-answer svg {
         width: 14px;
@@ -1009,6 +994,7 @@ main{
     
     .fullscreen-diagram {
         z-index: 10001 !important;
+        padding: 15px 0 !important;
     }
     
     .fullscreen-content {
@@ -1023,7 +1009,23 @@ main{
     
     .fullscreen-overlay {
         z-index: 10000 !important;
+        background-color: rgba(0, 0, 0, 0.1);
     }
+
+    main #header .nav .category-nav{
+        height: 100vh !important;
+    }
+    .fullscreen-content{
+        position: unset  !important;
+    }
+    .fullscreen-diagram{
+        z-index: 10001;
+    }
+     main{
+        min-height: 100vh !important;
+        z-index: 10000;
+     }
+
 }
 
 @media (max-width: 450px) {
@@ -1095,7 +1097,7 @@ main{
     }
     .fullscreen-content {
         max-width: 95% !important;
-        height: 80vh;
+        height: 85vh;
     }
     .diagram-display {
         padding: 10px 15px;
