--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -36,14 +36,14 @@ body{
     justify-content: center;
     height: 100%;
     width: 100%;
-    padding: 52px 0;
+    padding: 0 0 52px;
 }
 .karma-content{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 0;
     padding: 0 100px 60px 100px;
     position: absolute;
     top: 85%;
@@ -142,15 +142,19 @@ tr:nth-child(even) {
 #header .nav{
     display: flex;
     align-items: center;
-    color: #FFFFFF;
     justify-content: flex-end;
-    font-size: 20px;
     line-height: 100%;
-    font-weight: 500;
     position: relative;
     animation: moveHeader 1.5s;
     cursor: pointer;
     gap: 20px;
+    flex-wrap: nowrap;
+}
+#header .nav a{
+    font-size: 24px;
+    color: #FFFFFF;
+    font-weight: 700;
+    text-decoration: none;
 }
 #header .nav .nav-faq{
     padding: 15px;
@@ -216,7 +220,9 @@ tr:nth-child(even) {
     font-weight: 700;
     height: 100%;
     font-size: 24px;
-
+}
+#header .nav .nav-language #lang-submenu .lang{
+    color: #fff;
 }
 #header .nav .nav-language #lang-toggle:hover{
     color: #000;
@@ -368,6 +374,13 @@ tr:nth-child(even) {
     .mountain .road span{
         bottom: 10px;
     }
+    .mountain-container #header .nav .nav-faq,
+    .mountain-container #header .nav .nav-language #lang-toggle {
+        font-size: 22px !important;
+    }
+    .mountain-container #header .nav .nav-language #lang-submenu{
+        font-size: 22px !important;
+    }
 }
 @media (max-width: 1200px) {
     #header .logo {
@@ -405,7 +418,14 @@ tr:nth-child(even) {
         max-height: 80vh;
     }
     .mountain-container{
-        padding: 32px 0;
+        padding: 0 0 32px;
+    }
+    .mountain-container #header .nav .nav-faq,
+    .mountain-container #header .nav .nav-language #lang-toggle {
+        font-size: 20px !important;
+    }
+    .mountain-container #header .nav .nav-language #lang-submenu{
+        font-size: 20px !important;
     }
 }
 @media (max-width: 990px){
@@ -454,7 +474,7 @@ tr:nth-child(even) {
         height: 90px;
     }
     .mountain-container {
-        padding: 30px 0;
+        padding: 0 0 30px;
     }
     .karma-content{
         top: 80%;
@@ -471,8 +491,11 @@ tr:nth-child(even) {
     .mountain{
         max-height: 55vh;
     }
-    .nav .nav-faq a,
-    .nav-language #lang-toggle{
+    .mountain-container #header .nav .nav-faq,
+    .mountain-container #header .nav .nav-language #lang-toggle {
+        font-size: 18px !important;
+    }
+    .mountain-container #header .nav .nav-language #lang-submenu{
         font-size: 18px !important;
     }
 }
@@ -482,11 +505,15 @@ tr:nth-child(even) {
     }
 }
 @media (max-width: 768px) {
+    .mountain-container #header .nav .nav-faq,
+    .mountain-container #header .nav .nav-language #lang-toggle {
+        font-size: 16px !important;
+    }
+    .mountain-container #header .nav .nav-language #lang-submenu{
+        font-size: 16px !important;
+    }
     #header .logo{
         width: 60px;
-    }
-    .mountain-container{
-        padding: 30px 0 0;
     }
     .karma-content{
         padding: 0 30px 60px ;
@@ -527,6 +554,13 @@ tr:nth-child(even) {
     .mountain-container{
         padding: 0 !important;
     }
+    .mountain-container #header .nav .nav-faq,
+    .mountain-container #header .nav .nav-language #lang-toggle {
+        font-size: 16px !important;
+    }
+    .mountain-container #header .nav .nav-language #lang-submenu{
+        font-size: 16px !important;
+    }
     svg text{
         font-size: 21px;
         font-weight: bold;
@@ -546,7 +580,7 @@ tr:nth-child(even) {
         justify-content: flex-start;
         padding: 10px;
         height: fit-content;
-        background: #D9D9D9 !important;
+        background: rgb(217, 217, 217) !important;
 
     }
     #header {
@@ -616,6 +650,13 @@ tr:nth-child(even) {
     }
 }
 @media (max-width: 450px) {
+    .mountain-container #header .nav .nav-faq,
+    .mountain-container #header .nav .nav-language #lang-toggle {
+        font-size: 14px !important;
+    }
+    .mountain-container #header .nav .nav-language #lang-submenu{
+        font-size: 14px !important;
+    }
     #header .nav {
         gap: 10px !important;
     }
@@ -637,9 +678,6 @@ tr:nth-child(even) {
     }
     .pd-text{
         padding-left: 10px;
-    }
-    .mountain-container {
-        padding: 20px 0;
     }
     .karma-content{
         gap: 10px;
