create box-showdata at process %

--- a/src/pages/faq/faq.css
+++ b/src/pages/faq/faq.css
@@ -29,7 +29,7 @@ body {
     overflow: hidden;
     background-image: url('../../../public/images/faq/bg.png');
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
     background-position: center;
     background-attachment: fixed;
 }
