fix url and path

--- a/src/pages/faq/faq.css
+++ b/src/pages/faq/faq.css
@@ -27,7 +27,7 @@ body {
     padding-top: 0 !important;
     z-index: 100000 !important;
     overflow: hidden;
-    background-image: url('../../../public/images/faq/bg.png');
+    background-image: url('/images/faq/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
